--- a/mechanictraking/pubspec.yaml
+++ b/mechanictraking/pubspec.yaml
@@ -1,4 +1,4 @@
-name: mechanictraking
+name: mechanictracking
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -30,11 +30,17 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  feather_icons: ^1.2.0
+  http: ^0.13.3
+  google_fonts: ^4.0.4
+  cloud_firestore: ^4.15.8
+  firebase_auth: ^4.2.3
+  firebase_core: ^2.27.0
+  email_validator: ^2.1.16
+  image_picker: ^1.0.7
 
 dev_dependencies:
   flutter_test:
@@ -59,8 +65,7 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  #assets:
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
