--- a/mechanictraking/pubspec.yaml
+++ b/mechanictraking/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   email_validator: ^2.1.16
   image_picker: ^1.0.7
   custom_clippers: ^2.0.0
+  dotted_line: ^3.2.2
 
 dev_dependencies:
   flutter_test:
