--- a/mechanictraking/pubspec.yaml
+++ b/mechanictraking/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   custom_clippers: ^2.0.0
   dotted_line: ^3.2.2
   photo_view: ^0.14.0
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
