--- a/mechanictraking/pubspec.yaml
+++ b/mechanictraking/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   dotted_line: ^3.2.2
   photo_view: ^0.14.0
   intl: ^0.19.0
+  provider: ^6.1.2
+  shared_preferences: ^2.2.3
 
 dev_dependencies:
   flutter_test:
