--- a/mechanictraking/pubspec.yaml
+++ b/mechanictraking/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
     sdk: flutter
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+  flutter_dotenv: ^5.1.0
+  mailer: ^6.0.1
   cupertino_icons: ^1.0.6
   feather_icons: ^1.2.0
   http: ^0.13.3
@@ -72,8 +74,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  #assets:
+  assets:
   #   - images/a_dot_ham.jpeg
+    - .env
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
