--- a/mechanictraking/pubspec.yaml
+++ b/mechanictraking/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   provider: ^6.1.2
   shared_preferences: ^2.2.3
   font_awesome_flutter:
+  url_launcher: ^6.2.6
 
 
 dev_dependencies:
